--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +8,17 @@
     <link href="css/style.css" type="text/css" rel="stylesheet">
     <title>PokeDex</title>
 </head>
-<body>
-    <header>
-        <div class="logo"><img src="img/logo.png"></div>
-        <div class="header-content">
 
+<body>
+    <div id="wrapper">
+        <div id="header"></div>
+        <div id="logo"><img src="img/logo.png"></div>
+        <div id="left-panel"></div>
+        <div id="container">
+            <div class="card"></div>
         </div>
-    </header>
-    <div class="left-panel"></div>
-    <div class="container">
-        <div class="card"></div>
     </div>
     <script src="js/app.js"></script>
 </body>
+
 </html>
