--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <div id="header"></div>
         <div id="logo"><img src="img/logo.png"></div>
         <div id="left-panel"></div>
+        <!--<button id="prev">Previous</button>
+        <button id="next">Next</button>-->
         <div id="container">
             <div class="card"></div>
         </div>
