--- a/index.html
+++ b/index.html
@@ -6,19 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="css/style.css" type="text/css" rel="stylesheet">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <title>PokeDex</title>
 </head>
 
 <body>
     <div id="wrapper">
-        <div id="header"></div>
-        <div id="logo"><img src="img/logo.png"></div>
-        <div id="left-panel"></div>
-        <!--<button id="prev">Previous</button>
-        <button id="next">Next</button>-->
-        <div id="container">
-            <div class="card"></div>
+        <div id="header">
+            <div class="search-box">
+                <input type="text" name="" class="search-txt" placeholder="Type to search" />
+                <a class="search-btn" href="#">
+                    <i class="fas fa-search"></i>
+                </a>
+            </div>
         </div>
+        <div id="logo"><img src="img/logo.png"></div>
+        <div id="left-panel">
+            <div id="paging-nav">
+                    <button id="prev">Previous</button>
+                    <button id="next">Next</button>
+            </div>
+        </div>
+        <div id="container"></div>
     </div>
     <script src="js/app.js"></script>
 </body>
