--- a/index.html
+++ b/index.html
@@ -11,24 +11,27 @@
 </head>
 
 <body>
-    <div id="wrapper">
-        <div id="header">
-            <div class="search-box">
-                <input type="text" name="" class="search-txt" placeholder="Type to search" />
-                <a class="search-btn" href="#">
-                    <i class="fas fa-search"></i>
-                </a>
-            </div>
+    <div id="header">
+        <div class="search-box">
+            <input type="text" name="" class="search-txt" placeholder="Type to search" />
+            <a class="search-btn" href="#">
+                <i class="fas fa-search"></i>
+            </a>
         </div>
-        <div id="logo"><img src="img/logo.png"></div>
-        <div id="left-panel">
-            <div id="paging-nav">
-                    <button id="prev">Previous</button>
-                    <button id="next">Next</button>
-            </div>
-        </div>
-        <div id="container"></div>
     </div>
+    <div id="left-panel">
+        <div id="full-list">
+            <div class="nav-bar"><button class="btn btn1">Hover Me</button></div>
+            <p>Page:</p>
+            <p>Move to page:<input type="text" maxlength="3" onkeypress="this.style.width = ((this.value.length + 1) * 20) + 'px';"><a class="move-btn"><i class="fas fa-arrow-right"></i></a></p>
+            <div id="paging-nav">
+                <button id="prev"><i class="far fa-arrow-alt-circle-up"></i>Prev</button>
+                <button id="next"><i class="far fa-arrow-alt-circle-down"></i>Next</button>
+            </div>
+        </div>
+    </div>
+    <div id="logo"><img src="img/logo.png"></div>
+    <div id="container"></div>
     <script src="js/app.js"></script>
 </body>
 
