Both pannels designed

--- a/index.html
+++ b/index.html
@@ -21,13 +21,17 @@
     </div>
     <div id="left-panel">
         <div id="full-list">
-            <div class="nav-bar"><button class="btn btn1">Hover Me</button></div>
+            <div class="nav-bar"><button class="btn btn1">generator</button></div>
             <p>Page:</p>
             <p>Move to page:<input type="text" maxlength="3" onkeypress="this.style.width = ((this.value.length + 1) * 20) + 'px';"><a class="move-btn"><i class="fas fa-arrow-right"></i></a></p>
             <div id="paging-nav">
                 <button id="prev"><i class="far fa-arrow-alt-circle-up"></i>Prev</button>
                 <button id="next"><i class="far fa-arrow-alt-circle-down"></i>Next</button>
             </div>
+        </div>
+        <div id="generator">
+                <div class="nav-bar"><button class="btn btn1">full list</button></div>
+                <button id="random">Random</button>
         </div>
     </div>
     <div id="logo"><img src="img/logo.png"></div>
