All button events & error handling

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div id="full-list">
             <div class="nav-bar"><button class="nav-btn generator-btn">generator</button></div>
             <p>Page:</p>
+            <span id="info">Max. 101</span>
             <p>Move to page:<input class="page-value" type="text" maxlength="3" onkeypress="this.style.width = ((this.value.length + 1) * 20) + 'px';"><a class="move-btn"><i class="fas fa-arrow-right"></i></a></p>
             <div id="paging-nav">
                 <button id="prev"><i class="fas fa-arrow-left"></i>Prev</button>
